<resources>
    <string name="app_name">Breaking Bad Characters</string>
    <string name="tab_text_1">Characters</string>
    <string name="tab_text_2">Favorites</string>
    <string name="title_activity_character_details">CharacterDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name :</string>
    <string name="birthday">Birthday :</string>
    <string name="portrayed_by">Portrayed by :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="delete_from_favorite">Delete from favorite button</string>
    <string name="nickname">\"%1$s\"</string>
</resources>