<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:theme="@style/Theme.BB_characters.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.BB_characters.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/character_photo"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/character_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_name"
            android:text="@string/name"
            android:layout_margin="5dp"
            android:textSize="23sp"
            app:layout_constraintLeft_toRightOf="@+id/character_photo"
            app:layout_constraintTop_toBottomOf="@+id/appBar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_nickname"
            android:text="@string/nickname"
            android:layout_margin="5dp"
            android:textSize="23sp"

            app:layout_constraintLeft_toRightOf="@+id/character_photo"
            app:layout_constraintTop_toBottomOf="@+id/character_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_birthday"
            android:text="@string/birthday"
            android:layout_margin="5dp"
            android:textSize="23sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_portrayed"
            android:text="@string/portrayed_by"
            android:layout_margin="5dp"
            android:textSize="23sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_birthday"/>

        <Button
            android:id="@+id/add_to_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_to_favorite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>